--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,9 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
-        "laravel/reverb": "^1.5",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8",
-        "pusher/pusher-php-server": "^7.2"
+        "laravel/socialite": "^5.20",
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
