--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
-        "laravel/reverb": "^1.5",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.20",
         "laravel/tinker": "^2.8"
     },
     "require-dev": {
