--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.20",
-        "laravel/tinker": "^2.8",
-        "pusher/pusher-php-server": "^7.2"
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
